Fix some errors
Fix some errors

--- a/css/main.css
+++ b/css/main.css
@@ -28,12 +28,11 @@ html {
   position: absolute;
   bottom: 0;
   left: 0;
-  width: 100%
+  width: 100%;
 }
 
 .card-head {
-position: relative;
-
+  position: relative;
 }
 
 .card-label {
@@ -41,6 +40,6 @@ position: relative;
   border-left: 4px solid green;
   background-color: rgba(255, 255, 255, .6);
   position: absolute;
-  left:0;
-  top:0;
+  left: 0;
+  top: 0;
 }
